update pip requirements

--- a/.bdf_config.d/requirements.txt
+++ b/.bdf_config.d/requirements.txt
@@ -1,6 +1,15 @@
 # Upgrade pip
-#python3 -m pip install --upgrade pip setuptools wheel meson
+#pip3 install -U -r requirements.txt
 
 # Required PyPI packages
 autopep8
 flake8
+mccabe
+pip
+protobuf
+pycodestyle
+pyflakes
+setuptools
+six
+toml
+wheel
